# cetkaik_naive_representation

./: Cargo.toml
src/: absolute.rs  lib.rs  perspective.rs  relative.rs
