[package]
name = "cetkaik_naive_representation"
license = "MIT"
description = "A naïve representation of cetkaik"
version = "1.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.147", features = ["derive"] }
cetkaik_fundamental = "1.0.0"
cetkaik_traits = "1.3.1"
